[package]
name = "image-janitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
regex = "1"
thiserror = "1.0"
walkdir = "2"
glob = "0.3"
path-clean = "1.0.1"

[dev-dependencies]
tempfile = "3"
